// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to switch to automatic mode 1`] = `
<ConfirmButton
  cancelButtonText="close"
  confirmButtonText="save"
  confirmDisable={true}
  modalBody={
    <div
      className="display-flex-stretch big-spacer-top"
    >
      <RadioCard
        onClick={[Function]}
        selected={true}
        title="organization.members.management.manual"
      >
        <div
          className="spacer-left"
        >
          <ul
            className="big-spacer-left note"
          >
            <li
              className="spacer-bottom"
            >
              organization.members.management.manual.add_members_manually
            </li>
            <li>
              organization.members.management.choose_members_permissions
            </li>
          </ul>
        </div>
      </RadioCard>
      <RadioCard
        onClick={[Function]}
        selected={false}
        title="organization.members.management.automatic.github"
      >
        <div
          className="spacer-left"
        >
          <ul
            className="big-spacer-left note"
          >
            <React.Fragment>
              <li
                className="spacer-bottom"
              >
                organization.members.management.automatic.synchronized_from_x.organization.github
              </li>
              <li
                className="spacer-bottom"
              >
                organization.members.management.automatic.members_changes_reflected.github
              </li>
            </React.Fragment>
            <li>
              organization.members.management.choose_members_permissions
            </li>
          </ul>
        </div>
        <Alert
          className="big-spacer-top"
          variant="warning"
        >
          organization.members.management.automatic.warning_x.organization.github
        </Alert>
      </RadioCard>
    </div>
  }
  modalHeader="organization.members.management.title"
  modalHeaderDescription={
    <p
      className="spacer-top"
    >
      organization.members.management.description
      <Link
        className="spacer-left"
        onlyActiveOnIndex={false}
        style={Object {}}
        target="_blank"
        to={
          Object {
            "pathname": "/documentation/organizations/manage-team/",
          }
        }
      >
        learn_more
      </Link>
    </p>
  }
  onConfirm={[Function]}
  size="medium"
>
  <Component />
</ConfirmButton>
`;

exports[`should allow to switch to manual mode 1`] = `
<ConfirmButton
  cancelButtonText="close"
  confirmButtonText="save"
  confirmDisable={true}
  modalBody={
    <div
      className="display-flex-stretch big-spacer-top"
    >
      <RadioCard
        onClick={[Function]}
        selected={false}
        title="organization.members.management.manual"
      >
        <div
          className="spacer-left"
        >
          <ul
            className="big-spacer-left note"
          >
            <li
              className="spacer-bottom"
            >
              organization.members.management.manual.add_members_manually
            </li>
            <li>
              organization.members.management.choose_members_permissions
            </li>
          </ul>
        </div>
      </RadioCard>
      <RadioCard
        onClick={[Function]}
        selected={true}
        title="organization.members.management.automatic.github"
      >
        <div
          className="spacer-left"
        >
          <ul
            className="big-spacer-left note"
          >
            <React.Fragment>
              <li
                className="spacer-bottom"
              >
                organization.members.management.automatic.synchronized_from_x.organization.github
              </li>
              <li
                className="spacer-bottom"
              >
                organization.members.management.automatic.members_changes_reflected.github
              </li>
            </React.Fragment>
            <li>
              organization.members.management.choose_members_permissions
            </li>
          </ul>
        </div>
      </RadioCard>
    </div>
  }
  modalHeader="organization.members.management.title"
  modalHeaderDescription={
    <p
      className="spacer-top"
    >
      organization.members.management.description
      <Link
        className="spacer-left"
        onlyActiveOnIndex={false}
        style={Object {}}
        target="_blank"
        to={
          Object {
            "pathname": "/documentation/organizations/manage-team/",
          }
        }
      >
        learn_more
      </Link>
    </p>
  }
  onConfirm={[Function]}
  size="medium"
>
  <Component />
</ConfirmButton>
`;
